# skills-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  setup-claude.sh
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_tags_to_json.py  003_skill_usage_logs.py  004_api_key_tags_and_encrypted.py  005_team_members_and_subscriptions.py  006_api_key_scopes_to_json.py  007_skill_edit_logs.py  008_skill_visibility_teams.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  plugin.py  skills.py  stats.py  teams.py
backend/app/core/: crypto.py  permissions.py  security.py
backend/app/models/: __init__.py  api_key.py  category.py  edit_log.py  skill.py  subscription.py  team.py  team_member.py  usage_log.py  user.py
backend/app/schemas/: skill.py  user.py
backend/app/utils/: skill_parser.py
backend/tests/: test_api.py
docs/: API.md  PLAN.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: FolderUpload.vue  Modal.vue  TagInput.vue  Toast.vue
frontend/src/composables/: useTheme.js  useToast.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Dashboard.vue  Layout.vue  Login.vue  Register.vue  Settings.vue  TeamView.vue  (+4 more)
mcp-server/: pyproject.toml
mcp-server/skills_hub_mcp/: __init__.py  server.py
scripts/claude/: bootstrap.sh  smoke-test.sh
